--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Akash's Resume</title>
+  <title>Radhika's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://chhabra-radhika.github.io/resume/resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>    
